hr-indi conflict, put into absolute with spacing to correct
hr-indi conflict with new body margin spacing caused gutters on line sides

--- a/css/styles.css
+++ b/css/styles.css
@@ -265,10 +265,16 @@
   }
 .hr-indi {
   border-top: 1px solid #A1D2E6;
-  margin-top: 0; 
-  margin-bottom: 50px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 87px;
 }
-
+@media (max-width: 920px) {
+  .hr-indi {
+    display:none;
+  }
+}
 @media (max-width: 930px) and (min-width: 769px) { 
 .indi-display-img-cs {
     max-height: 400px !important;
